@@ -27,6 +27,7 @@ CHANGELOG Roundcube Webmail
 - Fix XSS issue in handling of a style tag inside of an svg element [CVE-2017-6820]
 - Fix bug where settings/upload.inc could not be used by plugins (#5694)
 - Fix regression in LDAP fuzzy search where it always used prefix search instead (#5713)
+- Fix undesired effects when postgres database uses different timezone than PHP host (#5708)
 
 RELEASE 1.3-beta
 ----------------
